@@ -121,7 +121,7 @@ function MangAdmin:CreateMiscSection()
     name = "ma_delayparamlabel2",
     group = "misc",
     parent = ma_midframe,
-    text = "Specifies update frequency of Diff graphon Server tab. 4000 = ~1 minute, 20000 =~5 minutes",
+    text = "Specifies update frequency of Diff graph on Server tab.\n 4000 = ~1 minute, 20000 =~5 minutes",
     setpoint = {
       pos = "TOPLEFT",
       offX = 160,
